Switch from vnc_lite.html to vnc.html
- Modify JS and CSS for noVNC/vnc.html

--- a/jupyter_remote_desktop_proxy/share/web/noVNC/app/styles/base.css
+++ b/jupyter_remote_desktop_proxy/share/web/noVNC/app/styles/base.css
@@ -3,6 +3,9 @@
  * Copyright (C) 2019 The noVNC Authors
  * noVNC is licensed under the MPL 2.0 (see LICENSE.txt)
  * This file is licensed under the 2-Clause BSD license (see LICENSE.txt).
+ *
+ * Modified by b-data for seamless use with Jupyter Remote Desktop Proxy.
+ *
  */
 
 /*
@@ -630,7 +633,7 @@ html {
 }
 
 /* Connection Controls */
-:root:not(.noVNC_connected) #noVNC_disconnect_button {
+:root #noVNC_disconnect_button {
   display: none;
 }
 
