Revert "Modify JS and CSS for noVNC/vnc.html"
This reverts commit 453a2aa096c95af99abeca6af971c5a0905038b3.

--- a/jupyter_remote_desktop_proxy/share/web/noVNC/app/styles/base.css
+++ b/jupyter_remote_desktop_proxy/share/web/noVNC/app/styles/base.css
@@ -3,9 +3,6 @@
  * Copyright (C) 2019 The noVNC Authors
  * noVNC is licensed under the MPL 2.0 (see LICENSE.txt)
  * This file is licensed under the 2-Clause BSD license (see LICENSE.txt).
- *
- * Modified by b-data for seamless use with Jupyter Remote Desktop Proxy.
- *
  */
 
 /*
@@ -633,7 +630,7 @@ html {
 }
 
 /* Connection Controls */
-:root #noVNC_disconnect_button {
+:root:not(.noVNC_connected) #noVNC_disconnect_button {
   display: none;
 }
 
